# dtl-public

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md  dtl.pc.in
backends/cpu/: CMakeLists.txt  cpu_executor.hpp  work_stealing_pool.hpp  work_stealing_queue.hpp
backends/cuda/: CMakeLists.txt  cuda_event.hpp  cuda_executor.hpp  cuda_managed_memory_space.hpp  cuda_memory_space.hpp  cuda_memory_transfer.hpp
backends/hip/: CMakeLists.txt  hip_event.hpp  hip_executor.hpp  hip_memory_space.hpp  hip_memory_transfer.hpp
backends/mpi/: CMakeLists.txt  mpi_comm_adapter.hpp  mpi_communicator.hpp  mpi_environment.hpp  mpi_lifecycle.hpp  mpi_request.hpp  mpi_rma_adapter.hpp  mpi_topology.hpp  mpi_window.hpp
backends/nccl/: CMakeLists.txt  FindNCCL.cmake  nccl_comm_adapter.hpp  nccl_communicator.hpp  nccl_group_ops.hpp
backends/shared_memory/: CMakeLists.txt  shared_memory_communicator.hpp
backends/shmem/: CMakeLists.txt  shmem_communicator.hpp  shmem_memory_space.hpp  shmem_memory_window_impl.hpp  shmem_rma_adapter.hpp
benchmarks/: CMakeLists.txt  benchmark_main.cpp
benchmarks/algorithms/: bench_reduce.cpp  bench_scan.cpp  bench_sort.cpp  bench_transform.cpp
benchmarks/backend/: CMakeLists.txt  bench_cuda_operations.cpp  bench_mpi_collectives.cpp  bench_nccl_collectives.cpp
benchmarks/baselines/: bench_cpu_executor.cpp
benchmarks/bindings/: bench_c_api.cpp
benchmarks/communication/: bench_collectives.cpp  bench_halo_exchange.cpp  bench_point_to_point.cpp
benchmarks/containers/: bench_vector_access.cpp  bench_view_operations.cpp
benchmarks/futures/: bench_futures.cpp
benchmarks/memory/: bench_allocation.cpp  bench_memory_transfer.cpp
benchmarks/rma/: bench_rma.cpp
benchmarks/scaling/: bench_scaling.cpp
bindings/fortran/: CMakeLists.txt  dtl.f90  dtl_algorithms.f90  dtl_communication.f90  dtl_containers.f90  dtl_context.f90  dtl_core.f90  dtl_environment.f90  dtl_futures.f90  dtl_helpers.f90  dtl_mpmd.f90  dtl_policies.f90  dtl_rma.f90  dtl_topology.f90
bindings/fortran/examples/: CMakeLists.txt  fortran_hello_dtl.f90  fortran_vector_demo.f90
bindings/fortran/tests/: CMakeLists.txt  test_fortran_advanced.f90  test_fortran_algorithms.f90  test_fortran_basic.f90  test_fortran_callbacks.f90  test_fortran_communication.f90  test_fortran_environment.f90  test_fortran_rma.f90  test_fortran_tensor.f90
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/tests/: conftest.py  test_algorithms.py  test_async_algorithms.py  test_backend.py  test_containers.py  test_core.py  test_distributed_map.py  test_exceptions.py  test_futures.py  test_gpu_placement.py  test_rma.py  (+9 more)
examples/: CMakeLists.txt
examples/advanced/: custom_partition.cpp  distributed_tensor_ops.cpp  halo_exchange.cpp  hybrid_backend.cpp  topology_discovery.cpp
examples/algorithms/: distributed_find_count.cpp  distributed_sort.cpp  parallel_reduce.cpp  scan_prefix.cpp  stable_sort_example.cpp  transform_reduce.cpp
examples/applications/: jacobi_1d.cpp  monte_carlo_pi.cpp
examples/async/: async_pipeline.cpp  continuation_chaining.cpp  futures_dtl.cpp
examples/basics/: collective_ops_dtl.cpp  distributed_vector_sum.cpp  environment_context.cpp  hello_distributed.cpp  local_view_stl.cpp  point_to_point_dtl.cpp  vector_allreduce_dtl.cpp
examples/c/: README.md  algorithms.c  collective_ops  collective_ops.c  distributed_tensor  distributed_tensor.c  distributed_vector  distributed_vector.c  futures_rpc.c  hello_dtl  hello_dtl.c  jacobi_1d.c  monte_carlo_pi.c  mpmd_roles.c  nccl_modes.c  point_to_point.c  rma_operations.c  scan_prefix.c  topology_query.c
examples/containers/: distributed_array_example.cpp  distributed_map_example.cpp  distributed_span_example.cpp
examples/fortran/: README.md  collective_ops.f90  distributed_tensor.f90  distributed_vector  distributed_vector.f90  dtl_fortran.f90  dtl_fortran.mod  hello_dtl  hello_dtl.f90  jacobi_1d.f90  monte_carlo_pi.f90  point_to_point.f90  rma_operations.f90  scan_prefix.f90  topology_query.f90
examples/gpu/: gpu_accelerated_transform.cu  gpu_resident_vector.cu  multi_device_two_vectors.cu  runtime_device_selection.cu
examples/mini-apps/: CMakeLists.txt
examples/mpmd/: coordinator_worker.cpp  heterogeneous_roles.cpp  role_manager_dtl.cpp
examples/python/: README.md
examples/rma/: rma_atomics.cpp  rma_passive_target.cpp  rma_put_get.cpp
examples/shmem/: shmem_atomics_demo.cpp  shmem_put_get_demo.cpp
examples/views/: segmented_view_example.cpp  strided_view_example.cpp
runtime/: CMakeLists.txt
runtime/src/: backend_discovery.cpp  connection_pool.cpp  plugin_loader.cpp  runtime_registry.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/backend/: test_communicator_concept.cpp  test_executor_concept.cpp  test_memory_space_concept.cpp  test_topology_concept.cpp
tests/fuzz/: CMakeLists.txt  fuzz_c_api.cpp
tests/integration/: CMakeLists.txt  test_algorithms_mpi.cpp  test_c_bindings_mpi.cpp  test_connection_pool_mpi.cpp  test_context_mpi.cpp  test_cuda_algorithms.cu  test_cuda_algorithms_on_device_containers.cpp  test_cuda_device_buffer.cpp  test_cuda_device_memory_space_device_id.cpp  test_cuda_device_pool_domain.cpp  test_cuda_memory_space.cpp  test_cuda_multirank.cpp  test_cuda_multithread_device_scoping.cpp  test_device_view_and_copy_roundtrip.cpp  test_distributed_vector_mpi.cpp  test_gpu_placement.cpp  test_inter_group_comm.cpp  test_mpi_communicator.cpp  test_mpi_invariants.cpp  test_mpi_multirank.cpp  test_mpi_sort.cpp  test_mpmd_role_assignment.cpp  test_mpmd_workflow.cpp  test_nccl_multirank.cpp  test_placement_policies.cpp  test_rma_mpi.cpp  test_runtime_device_selection.cpp  test_scan_mpi.cpp  test_shmem_backend.cpp
tests/mpi/: test_stable_sort_global.cpp
tests/smoke/: test_header_smoke.cpp
tests/test_plugins/: CMakeLists.txt  test_plugin.cpp  test_plugin_bad_abi.cpp  test_plugin_fail_init.cpp
tests/test_util/: backend_skip.hpp
(+708 files in other folders)
